# Modern-CMake-Boilerplate

./: .gitignore  CMakeLists.txt  README.md
include/hello/: hello.h
lib/: CMakeLists.txt
src/: CMakeLists.txt
src/hello/: CMakeLists.txt  hello.cpp  main.cpp  private.h
